deploy/gitea-k8s/services/gitea-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-svc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  - port: 22
    targetPort: 22
    protocol: TCP
    name: ssh
  selector:
    app: gitea
